--- a/netlify.toml
+++ b/netlify.toml
@@ -2,6 +2,12 @@
   publish = "public"
   functions = "netlify/functions"
 
+[functions]
+  node_bundler = "esbuild"
+
+[functions."saju"]
+  timeout = 26
+
 [[redirects]]
   from = "/api/saju"
   to = "/.netlify/functions/saju"
